@@ -171,7 +171,7 @@ compatible.
     <code class="literal">20160603</code> which is greater than the
     <code class="literal">20160427</code> value of the macro in the 6.1.0 release,
     but there are features supported in the 6.1.0 release that are not
-    supported in 5.4.0 release.
+    supported in the 5.4.0 release.
     You also can't test for the exact values listed below to try and
     identify a release, because a snapshot taken from the gcc-5-branch on
     2016-04-27 would have the same value for the macro as the 6.1.0 release
