@@ -548,4 +548,8 @@
        <span class="emphasis"><em><code class="code">basic_string</code> CTAD ambiguity
        </em></span>
     </span></dt><dd><p>Change constructors to constrained templates.
+    </p></dd><dt><a id="manual.bugs.dr3096"></a><span class="term"><a class="link" href="http://www.open-std.org/jtc1/sc22/wg21/docs/lwg-defects.html#3096" target="_top">3096</a>:
+       <span class="emphasis"><em><code class="code">path::lexically_relative</code> is confused by trailing slashes
+       </em></span>
+    </span></dt><dd><p>Implement the fix for trailing slashes.
     </p></dd></dl></div></div></div><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="license.html">Prev</a> </td><td width="20%" align="center"><a accesskey="u" href="status.html">Up</a></td><td width="40%" align="right"> <a accesskey="n" href="setup.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">License </td><td width="20%" align="center"><a accesskey="h" href="../index.html">Home</a></td><td width="40%" align="right" valign="top"> Chapter 2. Setup</td></tr></table></div></body></html>
