@@ -786,7 +786,7 @@ Feature-testing recommendations for C++</a>.
 	</a>
       </td><td align="center"> 8.1 </td><td align="left"><code class="code"> __has_include(&lt;filesystem&gt;) </code>,
 	     <code class="code"> __cpp_lib_filesystem &gt;= 201603 </code>
-	     (requires linking with <code class="code">-lstdc++fs</code>)
+	     (GCC 8.x requires linking with <code class="code">-lstdc++fs</code>)
       </td></tr><tr><td align="left"> Relative Paths for Filesystem</td><td align="left">
 	<a class="link" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2016/p0219r1.html" target="_top">
 	P0219R1
