@@ -26,6 +26,7 @@
     <year>2016</year>
     <year>2017</year>
     <year>2018</year>
+    <year>2019</year>
     <holder>
       <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://www.fsf.org">FSF</link>
     </holder>
